--- a/css/styles.css
+++ b/css/styles.css
@@ -1,48 +1,9 @@
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-  }
 .landing{
-    padding: 0;
-    height: 100vh;
+    padding-top: 5%;
+    padding-bottom: 5%;
     background: url("../images/landing.jpg");
     background-size: cover;
-}
-.logo{
-    -webkit-animation: fadein 3s; /* Safari, Chrome and Opera > 12.1 */
-    -moz-animation: fadein 3s; /* Firefox < 16 */
-     -ms-animation: fadein 3s; /* Internet Explorer */
-      -o-animation: fadein 3s; /* Opera < 12.1 */
-         animation: fadein 3s;
+    background-position: center;
 }
 
-@keyframes fadein {
- from { opacity: 0; }
- to   { opacity: 1; }
-}
-
-/* Firefox < 16 */
-@-moz-keyframes fadein {
- from { opacity: 0; }
- to   { opacity: 1; }
-}
-
-/* Safari, Chrome and Opera > 12.1 */
-@-webkit-keyframes fadein {
- from { opacity: 0; }
- to   { opacity: 1; }
-}
-
-/* Internet Explorer */
-@-ms-keyframes fadein {
- from { opacity: 0; }
- to   { opacity: 1; }
-}
-
-/* Opera < 12.1 */
-@-o-keyframes fadein {
- from { opacity: 0; }
- to   { opacity: 1; }
-}
 
