--- a/css/styles.css
+++ b/css/styles.css
@@ -18,6 +18,7 @@ body{
     background: url("../images/architecture_design.jpg");
     background-size: cover;
     background-position: center;
+    text-shadow: 2px 2px 4px #000000;
 }
 .interior_background{
     padding-top: 5%;
@@ -25,6 +26,7 @@ body{
     background: url("../images/interior_background.jpg");
     background-size: cover;
     background-position: center;
+    text-shadow: 2px 2px 4px #000000;
 }
 .exterior_background{
     padding-top: 5%;
@@ -32,6 +34,7 @@ body{
     background: url("../images/exterior_background.jpg");
     background-size: cover;
     background-position: center;
+    text-shadow: 2px 2px 4px #000000;
 }
 #architecture p{
     font-size: 25px;
